
2012-02-?  v1.0.6  r?
------------------------------------------------------------------------

  * Do not check if an unsigned integer is less than zero.

2012-02-09  v1.0.5  r534
------------------------------------------------------------------------

  * Fix a crash in kevent() if an invalid kqueue descriptor is provided.
    Thanks to James William Pye for reporting this bug.
  * Backport kevent_test() to check for a bad kqueue descriptor.
  * Support multiarch header locations in Debian.

2011-07-13  v1.0.4  r530
------------------------------------------------------------------------

  * Revert the change to use /usr/lib64 on 64-bit hosts because it breaks
    on Debian.

2011-07-09  v1.0.3  r529
------------------------------------------------------------------------

  * Don't allow the user to override essential CFLAGS such as -fpic
  * Add _BSD_SOURCE to CFLAGS

2011-03-24  v1.0.2  r462
------------------------------------------------------------------------

  * When building on a 64-bit Linux host, install libraries in /usr/lib64.

2010-09-18  v1.0.1  r453
------------------------------------------------------------------------

  * Eliminate an unused assignment in signal_handler() and 
    evfilt_signal_copyout(). Fixes a build failure on Fedora.

2010-09-18  v1.0  r344
------------------------------------------------------------------------

  * Support older Linux kernels that do not have the EPOLLRDHUP flag.

  * Add a portable implementation of the EVFILT_TIMER filter.

  * Add Solaris to the list of supported platforms.

  * Fixed the 'make rpm' target to work on CentOS 5.

  * Modified the manpage to remove unimplemented features.

2010-08-05  v0.9.3  r309
------------------------------------------------------------------------

  * Fix a typo in kevent_copyin() that caused EV_RECEIPT to set the
    data field incorrectly in some cases. 
    (Credit to Julien Blache for discovering and fixing this bug)

2010-08-05  v0.9.2  r289